# ChangeLog for sys-kernel/git-sources
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.1404 2014/10/27 11:17:43 mpagano Exp $

*git-sources-3.18_rc2 (27 Oct 2014)

  27 Oct 2014; Michael Pagano <mpagano@gentoo.org>
  +git-sources-3.18_rc2.ebuild:
  Version bump

  20 Oct 2014; Mike Pagano <mpagano@gentoo.org> -git-sources-3.17_rc1.ebuild,
  -git-sources-3.17_rc2.ebuild, -git-sources-3.17_rc3.ebuild,
  -git-sources-3.17_rc4.ebuild, -git-sources-3.17_rc5.ebuild,
  -git-sources-3.17_rc6.ebuild, -git-sources-3.17_rc7.ebuild:
  Drop old.

*git-sources-3.18_rc1 (20 Oct 2014)

  20 Oct 2014; Mike Pagano <mpagano@gentoo.org> +git-sources-3.18_rc1.ebuild:
  Version bump

*git-sources-3.17_rc7 (29 Sep 2014)

  29 Sep 2014; Agostino Sarubbo <ago@gentoo.org> +git-sources-3.17_rc7.ebuild:
  Automated version bump to 3.17_rc7

*git-sources-3.17_rc6 (22 Sep 2014)

  22 Sep 2014; Agostino Sarubbo <ago@gentoo.org> +git-sources-3.17_rc6.ebuild:
  Automated version bump to 3.17_rc6

*git-sources-3.17_rc5 (15 Sep 2014)

  15 Sep 2014; Agostino Sarubbo <ago@gentoo.org> +git-sources-3.17_rc5.ebuild:
  Automated version bump to 3.17_rc5

*git-sources-3.17_rc4 (09 Sep 2014)

  09 Sep 2014; Agostino Sarubbo <ago@gentoo.org> +git-sources-3.17_rc4.ebuild:
  Version bump to 3.17_rc4

*git-sources-3.17_rc3 (01 Sep 2014)

  01 Sep 2014; Agostino Sarubbo <ago@gentoo.org> +git-sources-3.17_rc3.ebuild:
  Version bump to 3.17_rc3

*git-sources-3.17_rc2 (26 Aug 2014)

  26 Aug 2014; Agostino Sarubbo <ago@gentoo.org> +git-sources-3.17_rc2.ebuild:
  Version bump to 3.17_rc2

*git-sources-3.17_rc1 (17 Aug 2014)

  17 Aug 2014; Michael Pagano <mpagano@gentoo.org>
  -git-sources-3.16_rc1.ebuild, -git-sources-3.16_rc2.ebuild,
  -git-sources-3.16_rc3.ebuild, -git-sources-3.16_rc4.ebuild,
  -git-sources-3.16_rc5.ebuild, -git-sources-3.16_rc6.ebuild,
  -git-sources-3.16_rc7.ebuild, +git-sources-3.17_rc1.ebuild: